solve slide overflow
슬라이드가 부모태그를 넘어서는 오류를 수정

--- a/css/main.css
+++ b/css/main.css
@@ -313,6 +313,7 @@ header .badges .badge {
   background-color: #333;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 .notice .notice-line .inner__left h2 {
   color: #fff;
